--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -330,14 +330,6 @@
           <context context-type="linenumber">44</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="2602512984686027267" datatype="html">
-        <source>Registered !!</source>
-        <target state="needs-review-translation">Compte créé !</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/login/login.component.ts</context>
-          <context context-type="linenumber">60</context>
-        </context-group>
-      </trans-unit>
       <trans-unit id="3894950702316166331" datatype="html">
         <source>Loading...</source>
         <target state="needs-review-translation">Chargement...</target>
@@ -434,14 +426,6 @@
           <context context-type="linenumber">4,6</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="7281336317873334394" datatype="html">
-        <source>The playlist is public</source>
-        <target state="needs-review-translation">La playlist est publique</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.html</context>
-          <context context-type="linenumber">12</context>
-        </context-group>
-      </trans-unit>
       <trans-unit id="4580988005648117665" datatype="html">
         <source>Search</source>
         <target state="needs-review-translation">Rechercher</target>
@@ -464,22 +448,6 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search/search.component.html</context>
           <context context-type="linenumber">11</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="1823843876735462104" datatype="html">
-        <source>Playlists</source>
-        <target state="needs-review-translation">Playlists</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/search/search.component.html</context>
-          <context context-type="linenumber">22,23</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="6361074667042486205" datatype="html">
-        <source>Not implemented...</source>
-        <target state="needs-review-translation">Non implémenté...</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/search/search.component.html</context>
-          <context context-type="linenumber">24</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6582573664846559511" datatype="html">
@@ -708,6 +676,70 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/admin/components/manage-movie/manage-movie.component.html</context>
           <context context-type="linenumber">8,11</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1418389469161456903" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>Author successfully updated.</source>
+        <target state="needs-review-translation">Artiste mis à jour avec succès.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/author-dialog/author-dialog.component.ts</context>
+          <context context-type="linenumber">49</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4994837711907927684" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>Author successfully created.</source>
+        <target state="needs-review-translation">Artiste ajouté avec succès.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/author-dialog/author-dialog.component.ts</context>
+          <context context-type="linenumber">56</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8248061507241003349" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>Movie successfully updated.</source>
+        <target state="needs-review-translation">Clip mis à jour avec succès.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
+          <context context-type="linenumber">116</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="9013311627956501302" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>Movie successfully created.</source>
+        <target state="needs-review-translation">Clip ajouté avec succès.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
+          <context context-type="linenumber">124</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6117356857824045758" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>⚠️ Movie already in database (maybe disabled).</source>
+        <target state="needs-review-translation">⚠️ Film déjà présent (peut être désactivé).</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
+          <context context-type="linenumber">132</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4651413285359142551" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>Successfully registered.</source>
+        <target state="needs-review-translation">Compte créé avec succès.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/login/login.component.ts</context>
+          <context context-type="linenumber">63</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5854393389525252032" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>⚠️ Email already registered.</source>
+        <target state="needs-review-translation">⚠️ Email déjà enregistré.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/login/login.component.ts</context>
+          <context context-type="linenumber">71</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8338048671249153244" datatype="html" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+        <source>Show japanese</source>
+        <target state="needs-review-translation">Afficher en japonais</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/main-content/main-content.component.html</context>
+          <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
     </body>
