--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -8,10 +8,6 @@
           <context context-type="sourcefile">src/app/admin/admin.component.html</context>
           <context context-type="linenumber">5,6</context>
         </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/search/search.component.html</context>
-          <context context-type="linenumber">6</context>
-        </context-group>
       </trans-unit>
       <trans-unit id="5505637243815082364" datatype="html">
         <source>Authors</source>
@@ -84,7 +80,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.html</context>
-          <context context-type="linenumber">23</context>
+          <context context-type="linenumber">21</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/settings/settings.component.html</context>
@@ -103,37 +99,21 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.html</context>
-          <context context-type="linenumber">24,25</context>
+          <context context-type="linenumber">22,23</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="6603858138958982824" datatype="html">
-        <source>Updated !!</source>
+      <trans-unit id="1418389469161456903" datatype="html">
+        <source>Author successfully updated.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/admin/components/author-dialog/author-dialog.component.ts</context>
           <context context-type="linenumber">49</context>
         </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
-          <context context-type="linenumber">115</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.ts</context>
-          <context context-type="linenumber">56</context>
-        </context-group>
       </trans-unit>
-      <trans-unit id="8781716375472096599" datatype="html">
-        <source>Created !!</source>
+      <trans-unit id="4994837711907927684" datatype="html">
+        <source>Author successfully created.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/admin/components/author-dialog/author-dialog.component.ts</context>
           <context context-type="linenumber">56</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
-          <context context-type="linenumber">122</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.ts</context>
-          <context context-type="linenumber">68</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8829497237648100098" datatype="html">
@@ -187,7 +167,7 @@
         <source>Are you sure you want to delete this author and all of his movies ?</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/admin/components/manage-author/manage-author.component.ts</context>
-          <context context-type="linenumber">98</context>
+          <context context-type="linenumber">97</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3233064906087894160" datatype="html">
@@ -252,7 +232,7 @@
         <source>Are you sure you want to delete this movie ?</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/admin/components/manage-movie/manage-movie.component.ts</context>
-          <context context-type="linenumber">97</context>
+          <context context-type="linenumber">96</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3380668345439043022" datatype="html">
@@ -267,6 +247,27 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.html</context>
           <context context-type="linenumber">24</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8248061507241003349" datatype="html">
+        <source>Movie successfully updated.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
+          <context context-type="linenumber">116</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="9013311627956501302" datatype="html">
+        <source>Movie successfully created.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
+          <context context-type="linenumber">124</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6117356857824045758" datatype="html">
+        <source>⚠️ Movie already in database (maybe disabled).</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/admin/components/movie-dialog/movie-dialog.component.ts</context>
+          <context context-type="linenumber">132</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8998179362936748717" datatype="html">
@@ -355,11 +356,18 @@
           <context context-type="linenumber">47</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="2602512984686027267" datatype="html">
-        <source>Registered !!</source>
+      <trans-unit id="4651413285359142551" datatype="html">
+        <source>Successfully registered.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/login/login.component.ts</context>
           <context context-type="linenumber">63</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5854393389525252032" datatype="html">
+        <source>⚠️ Email already registered.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/login/login.component.ts</context>
+          <context context-type="linenumber">71</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3894950702316166331" datatype="html">
@@ -376,32 +384,39 @@
           <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="8338048671249153244" datatype="html">
+        <source>Show japanese</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/main-content/main-content.component.html</context>
+          <context context-type="linenumber">22</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="3885497195825665706" datatype="html">
         <source>Next</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/main-content/main-content.component.html</context>
-          <context context-type="linenumber">36</context>
+          <context context-type="linenumber">34</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7886570921510760899" datatype="html">
         <source>Tags</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/main-content/main-content.component.html</context>
-          <context context-type="linenumber">41</context>
+          <context context-type="linenumber">39</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4352526755847379280" datatype="html">
         <source>Source Code</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/main-content/main-content.component.html</context>
-          <context context-type="linenumber">50,51</context>
+          <context context-type="linenumber">48,49</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1368884853095124539" datatype="html">
         <source>Legal Notice</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/main-content/main-content.component.html</context>
-          <context context-type="linenumber">51,52</context>
+          <context context-type="linenumber">49,50</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1341396210789150207" datatype="html">
@@ -436,7 +451,7 @@
         <source>Logged out !!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/navbar/navbar.component.ts</context>
-          <context context-type="linenumber">39</context>
+          <context context-type="linenumber">38</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5123397280103607848" datatype="html">
@@ -453,11 +468,18 @@
           <context context-type="linenumber">4,6</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="7281336317873334394" datatype="html">
-        <source>The playlist is public</source>
+      <trans-unit id="6603858138958982824" datatype="html">
+        <source>Updated !!</source>
         <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.html</context>
-          <context context-type="linenumber">12</context>
+          <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.ts</context>
+          <context context-type="linenumber">62</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="8781716375472096599" datatype="html">
+        <source>Created !!</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/playlist-dialog/playlist-dialog.component.ts</context>
+          <context context-type="linenumber">69</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4580988005648117665" datatype="html">
@@ -479,20 +501,6 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search/search.component.html</context>
           <context context-type="linenumber">11</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="1823843876735462104" datatype="html">
-        <source>Playlists</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/search/search.component.html</context>
-          <context context-type="linenumber">22,23</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="6361074667042486205" datatype="html">
-        <source>Not implemented...</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/search/search.component.html</context>
-          <context context-type="linenumber">24</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6582573664846559511" datatype="html">
@@ -562,28 +570,28 @@
         <source>Password updated</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/settings/settings.component.ts</context>
-          <context context-type="linenumber">51</context>
+          <context context-type="linenumber">50</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3479684349083171858" datatype="html">
         <source>Error during changing password !!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/settings/settings.component.ts</context>
-          <context context-type="linenumber">57</context>
+          <context context-type="linenumber">56</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2074664422710428315" datatype="html">
         <source>Account deleted !!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/settings/settings.component.ts</context>
-          <context context-type="linenumber">72</context>
+          <context context-type="linenumber">71</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1809060825165769297" datatype="html">
         <source>Error during deletion !!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/settings/settings.component.ts</context>
-          <context context-type="linenumber">78</context>
+          <context context-type="linenumber">77</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5344791164491756179" datatype="html">
